--- a/Course/Time-Series/mynote/Python 实现移动平均模型(MA).ipynb
+++ b/Course/Time-Series/mynote/Python 实现移动平均模型(MA).ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## "
+    "## 第三方实现"
    ]
   },
   {
@@ -120,6 +120,129 @@
     "plt.title('MA(1) Model - Predictions')\n",
     "plt.legend()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 从零实现"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 假设我们有以下时间序列数据  \n",
+    "data = np.array([10.2, 9.7, 10.5, 10.1, 10.6, 10.4, 10.9, 11.0, 9.8, 10.3])  \n",
+    "\n",
+    "# 定义MA(1)模型，即：X_t = mu + epsilon_t + theta * epsilon_{t-1}  \n",
+    "# 初始假设  \n",
+    "mu_initial = np.mean(data)  # 可以简单地假设为数据的平均值  \n",
+    "theta_initial = 0.5        # 初始化theta为任意的常数  \n",
+    "epsilon_initial = 0        # 初始误差为0  \n",
+    "\n",
+    "# 定义迭代次数和学习率  \n",
+    "iterations = 50  \n",
+    "learning_rate = 0.01  \n",
+    "\n",
+    "# 初始化参数  \n",
+    "mu = mu_initial  \n",
+    "theta = theta_initial  \n",
+    "epsilon = epsilon_initial  \n",
+    "epsilons = np.zeros_like(data)  # 储存误差项  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration 1: Total Loss = 2.3301, Mu = 10.3544, Theta = 0.4748\n",
+      "Iteration 2: Total Loss = 2.2588, Mu = 10.3580, Theta = 0.4512\n",
+      "Iteration 3: Total Loss = 2.1969, Mu = 10.3612, Theta = 0.4290\n",
+      "Iteration 4: Total Loss = 2.1426, Mu = 10.3638, Theta = 0.4081\n",
+      "Iteration 5: Total Loss = 2.0948, Mu = 10.3659, Theta = 0.3883\n",
+      "Iteration 6: Total Loss = 2.0525, Mu = 10.3677, Theta = 0.3696\n",
+      "Iteration 7: Total Loss = 2.0147, Mu = 10.3691, Theta = 0.3519\n",
+      "Iteration 8: Total Loss = 1.9810, Mu = 10.3703, Theta = 0.3350\n",
+      "Iteration 9: Total Loss = 1.9507, Mu = 10.3712, Theta = 0.3189\n",
+      "Iteration 10: Total Loss = 1.9235, Mu = 10.3718, Theta = 0.3037\n",
+      "Iteration 11: Total Loss = 1.8989, Mu = 10.3724, Theta = 0.2891\n",
+      "Iteration 12: Total Loss = 1.8766, Mu = 10.3727, Theta = 0.2752\n",
+      "Iteration 13: Total Loss = 1.8564, Mu = 10.3730, Theta = 0.2619\n",
+      "Iteration 14: Total Loss = 1.8380, Mu = 10.3731, Theta = 0.2491\n",
+      "Iteration 15: Total Loss = 1.8213, Mu = 10.3732, Theta = 0.2370\n",
+      "Iteration 16: Total Loss = 1.8060, Mu = 10.3732, Theta = 0.2253\n",
+      "Iteration 17: Total Loss = 1.7921, Mu = 10.3732, Theta = 0.2141\n",
+      "Iteration 18: Total Loss = 1.7793, Mu = 10.3731, Theta = 0.2034\n",
+      "Iteration 19: Total Loss = 1.7677, Mu = 10.3730, Theta = 0.1931\n",
+      "Iteration 20: Total Loss = 1.7569, Mu = 10.3729, Theta = 0.1832\n",
+      "Iteration 21: Total Loss = 1.7471, Mu = 10.3728, Theta = 0.1738\n",
+      "Iteration 22: Total Loss = 1.7381, Mu = 10.3727, Theta = 0.1646\n",
+      "Iteration 23: Total Loss = 1.7297, Mu = 10.3725, Theta = 0.1559\n",
+      "Iteration 24: Total Loss = 1.7221, Mu = 10.3724, Theta = 0.1474\n",
+      "Iteration 25: Total Loss = 1.7150, Mu = 10.3722, Theta = 0.1393\n",
+      "Iteration 26: Total Loss = 1.7085, Mu = 10.3721, Theta = 0.1315\n",
+      "Iteration 27: Total Loss = 1.7025, Mu = 10.3720, Theta = 0.1239\n",
+      "Iteration 28: Total Loss = 1.6970, Mu = 10.3719, Theta = 0.1167\n",
+      "Iteration 29: Total Loss = 1.6919, Mu = 10.3717, Theta = 0.1097\n",
+      "Iteration 30: Total Loss = 1.6871, Mu = 10.3716, Theta = 0.1030\n",
+      "Iteration 31: Total Loss = 1.6827, Mu = 10.3716, Theta = 0.0965\n",
+      "Iteration 32: Total Loss = 1.6787, Mu = 10.3715, Theta = 0.0902\n",
+      "Iteration 33: Total Loss = 1.6749, Mu = 10.3714, Theta = 0.0842\n",
+      "Iteration 34: Total Loss = 1.6714, Mu = 10.3713, Theta = 0.0783\n",
+      "Iteration 35: Total Loss = 1.6682, Mu = 10.3713, Theta = 0.0727\n",
+      "Iteration 36: Total Loss = 1.6652, Mu = 10.3712, Theta = 0.0673\n",
+      "Iteration 37: Total Loss = 1.6624, Mu = 10.3712, Theta = 0.0620\n",
+      "Iteration 38: Total Loss = 1.6599, Mu = 10.3712, Theta = 0.0569\n",
+      "Iteration 39: Total Loss = 1.6575, Mu = 10.3712, Theta = 0.0520\n",
+      "Iteration 40: Total Loss = 1.6552, Mu = 10.3711, Theta = 0.0473\n",
+      "Iteration 41: Total Loss = 1.6532, Mu = 10.3711, Theta = 0.0427\n",
+      "Iteration 42: Total Loss = 1.6513, Mu = 10.3711, Theta = 0.0383\n",
+      "Iteration 43: Total Loss = 1.6495, Mu = 10.3711, Theta = 0.0341\n",
+      "Iteration 44: Total Loss = 1.6478, Mu = 10.3711, Theta = 0.0299\n",
+      "Iteration 45: Total Loss = 1.6463, Mu = 10.3711, Theta = 0.0260\n",
+      "Iteration 46: Total Loss = 1.6448, Mu = 10.3711, Theta = 0.0221\n",
+      "Iteration 47: Total Loss = 1.6435, Mu = 10.3712, Theta = 0.0184\n",
+      "Iteration 48: Total Loss = 1.6423, Mu = 10.3712, Theta = 0.0148\n",
+      "Iteration 49: Total Loss = 1.6411, Mu = 10.3712, Theta = 0.0113\n",
+      "Iteration 50: Total Loss = 1.6400, Mu = 10.3712, Theta = 0.0079\n",
+      "Estimated errors (epsilons): [ 0.         -0.67120867  0.14979065 -0.26216962  0.2466888   0.03775411\n",
+      "  0.53849551  0.62380998 -0.59352173 -0.06838598]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 迭代过程  \n",
+    "for iteration in range(iterations):  \n",
+    "    total_loss = 0  \n",
+    "    for t in range(1, len(data)):  \n",
+    "        # 预测值计算  \n",
+    "        predicted = mu + theta * epsilons[t - 1]  \n",
+    "\n",
+    "        # 计算误差  \n",
+    "        epsilons[t] = data[t] - predicted  \n",
+    "\n",
+    "        # 计算损失 (平方误差)  \n",
+    "        loss = epsilons[t] ** 2  \n",
+    "        total_loss += loss  \n",
+    "\n",
+    "        # 更新参数 (Gradient Descent 更新)  \n",
+    "        mu -= learning_rate * (-2 * epsilons[t])  \n",
+    "        theta -= learning_rate * (-2 * epsilons[t] * epsilons[t - 1])  \n",
+    "\n",
+    "    # 输出当前状态  \n",
+    "    print(f\"Iteration {iteration + 1}: Total Loss = {total_loss:.4f}, Mu = {mu:.4f}, Theta = {theta:.4f}\")  \n",
+    "\n",
+    "# 输出最终误差项  \n",
+    "print(\"Estimated errors (epsilons):\", epsilons)"
    ]
   },
   {
